# bingo

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
bingo/: api.py  engine.py  run.py  settings.py
example/: payload.json
tests/: test_api.py  test_engine.py
