[project]
name = "bingo"
version = "0.1.0"
description = "Bingo game from AoC"
authors = [
    {name = "Daniel Vojtko",email = "danovojtko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I",     # isort
    "RUF",   # ruff
    "LOG",   # flake8-logging
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "FA",    # flake8-future-annotations
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = [
    "PLR2004", # Magic value used in comparison, ...
    "S101",    # Use of `assert` detected
]
